--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ language: node_js
 node_js:
   - 0.10
 before_install:
-# Force npm update to npm@>=2
-  - npm update -g
+  - npm install -g karma-cli
