--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "dummy-drunken-octo-nemesis ==========================",
   "main": "index.js",
   "scripts": {
-    "test": "karma start --single-run"
+    "test": "karma start karma.conf-ci.js"
   },
   "repository": {
     "type": "git",
