--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.1.4",
+    "karma-sauce-launcher": "^0.2.10",
     "mocha": "^2.1.0"
   }
 }
